# libppm

./: README.md
ppm/: Cargo.toml  build.rs  test_save_load.ppm
ppm/src/: ffi.rs  lib.rs
ppm/tests/: test.rs
ppm/tests/sub_test/: mod.rs  test_image.rs  test_pixel.rs
use_ppm_library/: Cargo.toml  test_lib_C.ppm  test_save.ppm  test_save2.ppm  test_save_inv.ppm
use_ppm_library/binary_image/: CatLogo.128.ppm  Gray_CatLogo.128.ppm  dic_Billes.256.ppm  dix_Lena.512.ppm
use_ppm_library/image/: frame.030.ppm  frame.060.ppm
use_ppm_library/src/: main.rs
