[package]
name = "use_ppm_library"
version = "0.1.0"
authors = ["dyor (Arnauld) <augustinville@yahoo.fr>","DjamelRAAB <djamel.r.75@gmail.com>","Zohir MALTI <zohirmalti@gmail.com>","AMINEFAIZ <aminefaiz.info@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ppm]
path = "/home/raab/ESGI/PSR-Rust/Projet/Rust_projet_PPM/ppm"

